# dreamulator

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  README_fy.md  pyproject.toml
.claude/commands/: narrate.md
.github/workflows/: deploy-pages.yml
doc/mapgen4-cn/: main.md
docs/: CLAUDE.md
docs/design/: map_system_design.md  roadmap-analysis.md
docs/knowledge/: CLAUDE.md
docs/usage/: CLAUDE.md  civmap-guide.md  frontend-3d-viewer.md  map-editor-guide.md  map-system.md  map-workflow.md  project-structure.md  roadmap-analysis.md  terrain-pipeline.md
docs/worldbuilding/: CLAUDE.md  design_patterns.md  map_design_guide.md
frontend/: .env.static  .env.static-local  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
schemas/: civilization.schema.json  computation_manifest.schema.json  ecosystem.schema.json  planet.schema.json  settlement.schema.json  simulation_run.schema.json  species.schema.json  stellar_system.schema.json  world.schema.json
scripts/: export_static.py  generate_planet_heightmap.py  prepare_civmap_data.py
src/dreamulator/: __init__.py  api.py  branch_manager.py  cli.py  narrator.py  resolver.py  world_manager.py
tests/: conftest.py  test_branch_manager.py  test_resolver.py
tests/test_engine/: test_astronomy_engine.py  test_stellar_physics.py
tests/test_map/: test_terrain_pipeline.py
tests/test_models/: test_branch.py  test_engine.py  test_layers.py  test_planet.py  test_stellar.py  test_world.py
(+234 files in other folders)
