[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dreamulator"
version = "0.3.0"
description = "Fantasy world building and simulation tool grounded in real science"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11",
    "typer>=0.15",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "numpy>=2.0",
    "scipy>=1.14",
    "astropy>=7.0",
    "pyyaml>=6.0",
    "jsonschema>=4.23",
    "jinja2>=3.1",
    "conlang",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
    "tifffile>=2026.7.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.0",
    "mypy>=1.14",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "httpx>=0.28",
]
narrate = [
    "anthropic>=0.40",
]
heightmap = [
    "opensimplex>=0.4",
    "matplotlib>=3.8",
]

[project.scripts]
dreamulator = "dreamulator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dreamulator"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
conlang = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
